cambios al diseño del form / vuelos

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -437,6 +437,12 @@ nav.navbar.navbar-expand-lg.bg-body-tertiary {
 .form__vuelos {
     padding: 2rem;
 }
+form.section-vuelos__form {
+    background: #000000e0;
+    border: 5px black solid;
+    width: -webkit-fill-available;
+    display: inline-block;
+}
 .vuelos__parrafo {
     padding: 2rem;
     font-size: 1.2rem;
