--- a/css/estilo.css
+++ b/css/estilo.css
@@ -250,7 +250,7 @@ nav.navbar.navbar-expand-lg.bg-body-tertiary {
     }
 }
 
-/*-----------------ESTILOS DE LAS VISTAS-----------------*/
+/*-----------------ACTIVIDADES/estilos-----------------*/
 .main__actividades {
     font-family: 'Raleway', sans-serif;
     background-color: white;
