--- a/sass/parciales/_main__actividades.scss
+++ b/sass/parciales/_main__actividades.scss
@@ -1,12 +1,13 @@
+/*-----------------ACTIVIDADES/estilos-----------------*/
 .main__actividades{
     font-family: 'Raleway', sans-serif;
-    background-color: white;
+    background-color:#fff;
     display: flex;
     flex-direction: column;
     text-align: center;
     font-weight: bolder;
     font-size: 1rem;
-    color: black;
+    color: #000;
     overflow-x: hidden;
     width: 90%;
     margin: 80px auto;
