--- a/sass/parciales/_main__aloja.scss
+++ b/sass/parciales/_main__aloja.scss
@@ -1,7 +1,8 @@
+/*-----------------ALOJAMIENTO/estilos-----------------*/
 .main__aloja {
     font-family: 'Raleway', sans-serif;
-    background-color: white;
-    color: black;
+    background-color:#fff;
+    color:#000;
     overflow-x: hidden;
     width: 90%;
     margin: 10px auto;
