--- a/sass/parciales/_main__vuelos.scss
+++ b/sass/parciales/_main__vuelos.scss
@@ -1,3 +1,4 @@
+/*-------------------VUELOS/estilos---------------------*/
 .main__vuelos{
     font-family: 'Raleway', sans-serif;
     background-color: white;
