--- a/sass/parciales/_section-contactos.scss
+++ b/sass/parciales/_section-contactos.scss
@@ -2,7 +2,7 @@
 .section-contactos {
     &__titulos {
         text-align: center;
-        font-size: 4vmin;
+        font-size: $titulo-size;
         color: whitesmoke;
         margin-bottom: 2rem;
         margin-top: 2rem; }
