--- a/sass/parciales/_body.scss
+++ b/sass/parciales/_body.scss
@@ -4,8 +4,8 @@
     font-family: 'Raleway', sans-serif;
 
         &__info {
-        background-color: black;
-        color: #fff;
+        background-color: $body-info-color;
+        color: $body-info-color1;
         padding-top: 20px;
         padding-bottom: 0px;
         text-align: center; }
