--- a/sass/parciales/_footer.scss
+++ b/sass/parciales/_footer.scss
@@ -1,8 +1,8 @@
 /*-----------------------footer-------------------------*/
 .footer {
     font-size: 0.8rem;
-    background-color: black;
-    color: #fff;
+    background-color:$footer-color;
+    color:#fff;
     text-align: center;
     padding: 1px;
     margin-top: auto; 
