--- a/sass/parciales/_header.scss
+++ b/sass/parciales/_header.scss
@@ -1,4 +1,4 @@
-
+/*-------------------Index/Portada----------------------*/
 .header {
     width: 98.7vw;
     height: 100vh;
@@ -12,7 +12,7 @@
 
     &__content {
         margin-bottom: 150px;
-        color: whitesmoke;
+        color:#fff;
         text-align: center; }
 
     &__h1 {
