--- a/sass/parciales/_main__contactos.scss
+++ b/sass/parciales/_main__contactos.scss
@@ -1,3 +1,4 @@
+/*-------------------CONTACTOS/estilos------------------*/
 .main__contactos {
     font-family: 'Raleway', sans-serif;
     background-image: url(../img/cont1.jpg);
