--- a/sass/parciales/_media-queries.scss
+++ b/sass/parciales/_media-queries.scss
@@ -109,10 +109,13 @@
         margin: 2rem;
         flex-direction: column;
         align-items: center; }
+    .contenedor__p {
+        text-align: justify;
+        padding: 1rem;
+        font-size: 1rem;}
     /*--------------------media queries/alojamiento--------------*/
     .section-aloja__info {
         font-size: 0.5rem;
-        background-color: #cfcbcb;
         border-radius: 1rem; }
     .section-aloja__gallery-title {
         font-size: calc(1rem + .9vw); }
@@ -193,10 +196,11 @@
         padding: 3px 8px;
         background: #ff0d5d;
         border-radius: 30px;
-        color: whitesmoke; }
+        color: #fff; }
     .contenedor__p {
         text-align: initial;
-        padding: 1rem; }
+        padding: 1rem;
+        font-size: 1rem; }
     .excursiones__card {
         display: flex;
         justify-content: center;
@@ -254,7 +258,6 @@
     .section-aloja__info {
         font-size: 0.5rem;
         margin: 0rem;
-        background-color: #cfcbcb;
         border-radius: 3rem; }
     .section-aloja__gallery-title {
         font-size: calc(1rem + .2vw); } }
