--- a/sass/parciales/_section-actividades.scss
+++ b/sass/parciales/_section-actividades.scss
@@ -2,8 +2,8 @@
 .section-actividades {
     &__titulos {
         text-align: center;
-        font-size: 4vmin;
-        color: #667183;
+        font-size: $titulo-size;
+        color: $titulo-color;
         margin-bottom: 2rem;
         margin-top: 2rem; }
     
