agrege varibles de las propidedas de la caja

--- a/sass/parciales/_main__actividades.scss
+++ b/sass/parciales/_main__actividades.scss
@@ -9,6 +9,6 @@
     font-size: 1rem;
     color: #000;
     overflow-x: hidden;
-    width: 90%;
-    margin: 80px auto;
+    width: $width;
+    margin: $margin;
 }
