--- a/sass/parciales/_main__aloja.scss
+++ b/sass/parciales/_main__aloja.scss
@@ -4,6 +4,6 @@
     background-color:#fff;
     color:#000;
     overflow-x: hidden;
-    width: 90%;
-    margin: 10px auto;
+    width: $width;
+    margin:$margin-2;
 }
