--- a/sass/parciales/_main__vuelos.scss
+++ b/sass/parciales/_main__vuelos.scss
@@ -7,6 +7,6 @@
     font-weight: bolder;
     color: black;
     overflow: hidden;
-    width: 90%;
-    margin: 10px auto;
+    width: $width;
+    margin: $margin-2;
 }
