--- a/sass/parciales/_section.scss
+++ b/sass/parciales/_section.scss
@@ -1,7 +1,7 @@
 /*-------------------Index/eventos---------------------*/
 .section {
-    width: 80%;
-    margin: 80px auto;
+    width: $width;
+    margin: $margin;
     &__titulos {
         text-align: center;
         font-size: $titulo-size;
