--- a/sass/parciales/_vars.scss
+++ b/sass/parciales/_vars.scss
@@ -2,6 +2,12 @@
 $titulo-color:#667183;
 $titulo-size: 5vmin;
 
+//variables/ propiedades de la caja
+$width: 90%;
+$margin: 80px auto;
+$margin-2: 10px auto;
+
+
 //variables/ Navbar
 $navbar-background: #212529;
 $navbar-color: #fff;
