--- a/sass/parciales/_main__contactos.scss
+++ b/sass/parciales/_main__contactos.scss
@@ -10,8 +10,7 @@
     justify-content: space-around;
     font-size: 1rem;
     text-align: center;
-    font-weight: bolder;
     color: #fff;
-    overflow-x: hidden;
+   // overflow-x: hidden;
     padding: 2rem;
 }
