--- a/sass/parciales/_navbar.scss
+++ b/sass/parciales/_navbar.scss
@@ -16,8 +16,8 @@
 
     &-brand {
     color: $navbar-color;
-    font-size: 2rem;
-    padding-right: 31rem;}
+    font-size: 4vmin;
+    padding-right: 4rem;}
 
     &-brand:hover {
         color: $navbar-hover; }
