--- a/css/compilado.css
+++ b/css/compilado.css
@@ -13,7 +13,8 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  border: 3px brown solid; }
 
 .body {
   display: flex;
@@ -45,8 +46,8 @@
     --bs-nav-link-color: #fff; }
   .navbar-brand {
     color: #fff;
-    font-size: 2rem;
-    padding-right: 31rem; }
+    font-size: 4vmin;
+    padding-right: 4rem; }
   .navbar-brand:hover {
     color: #ff0d5d; }
   .navbar .nav-link:hover {
@@ -60,15 +61,14 @@
 
 /*-------------------Index/Portada----------------------*/
 .header {
-  width: 98.7vw;
+  width: 100%;
   height: 100vh;
   background-image: url(../img/bannerp.jpg);
   background-position: bottom;
   background-size: cover;
   display: flex;
   align-items: flex-end;
-  justify-content: center;
-  overflow: hidden; }
+  justify-content: center; }
   .header__content {
     margin-bottom: 150px;
     color: #fff;
@@ -115,7 +115,6 @@
 .contenedor__p {
   text-align: initial;
   padding: 2rem;
-  font-weight: bolder;
   font-size: 1.5rem; }
 
 .banner__info {
@@ -232,7 +231,6 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  font-weight: bolder;
   font-size: 1rem;
   color: #000;
   overflow-x: hidden;
@@ -283,6 +281,38 @@
   justify-content: space-evenly;
   margin: 2rem; }
 
+.section-actividades__excursiones-gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 257px;
+  padding: 8px;
+  padding-top: 6rem;
+  gap: 5px; }
+
+.section-actividades__gallery-item {
+  position: relative; }
+
+.section-actividades__gallery-title {
+  font-size: 3vmin;
+  position: absolute;
+  bottom: 0;
+  color: #fff;
+  background: linear-gradient(348deg, black, transparent);
+  width: 100%;
+  margin: 0;
+  padding: 10px; }
+
+.section-actividades__gallery-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; }
+
+.section-actividades__gallery-item:nth-child(4) {
+  grid-column-start: span 2; }
+
+.section-actividades__gallery-item:nth-child(1) {
+  grid-row-start: span 3; }
+
 /*-----------------ALOJAMIENTO/estilos-----------------*/
 .main__aloja {
   font-family: 'Raleway', sans-serif;
@@ -310,6 +340,7 @@
   justify-content: center; }
 
 .section-aloja__gallery {
+  font-size: 3vmin;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: 257px;
@@ -354,7 +385,6 @@
   background-color: white;
   font-size: 1rem;
   text-align: center;
-  font-weight: bolder;
   color: black;
   overflow: hidden;
   width: 90%;
@@ -393,6 +423,7 @@
   position: relative; }
 
 .section-vuelos__gallery-title {
+  font-size: 3vmin;
   position: absolute;
   bottom: 0;
   color: #fff;
@@ -434,9 +465,7 @@
   justify-content: space-around;
   font-size: 1rem;
   text-align: center;
-  font-weight: bolder;
   color: #fff;
-  overflow-x: hidden;
   padding: 2rem; }
 
 .section-contactos__titulos {
@@ -489,12 +518,11 @@
 @media screen and (max-width: 1025px) {
   /*------------------------index-----------------------------*/
   .header {
-    width: 100vw;
+    width: 100%;
     height: 100vh; }
   .navbar-brand {
     color: #fff;
-    font-size: 2rem;
-    padding-right: 14rem; }
+    font-size: 4vmin; }
   /*------------------------Actividades-----------------------*/
   .section-actividades__resort {
     display: flex;
@@ -509,16 +537,32 @@
 @media screen and (max-width: 769px) {
   /*------------------------index-----------------------------*/
   .header {
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden; }
+    width: 100%;
+    height: 100vh; }
   .navbar-brand {
     color: #fff;
-    font-size: 2rem;
-    padding-right: 28rem; }
+    font-size: 4vmin; }
   .dropdown-menu.show {
     display: block;
     width: fit-content; }
+  .section__item {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin-top: 20px;
+    flex-direction: column; }
+  /*------------------------Actividades-----------------------*/
+  .section-actividades__paseos-card {
+    display: flex;
+    margin-bottom: 3rem;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center; }
+  .section-actividades__resort-card {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 2rem;
+    flex-wrap: wrap; }
   /*------------------------vuelo-----------------------------*/
   .section-vuelos__card {
     display: flex;
@@ -550,13 +594,12 @@
   .section__col {
     margin-bottom: 2rem; }
   .header {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     overflow: hidden; }
   .navbar-brand {
     color: #fff;
-    font-size: 2rem;
-    padding-right: 1rem; }
+    font-size: 4vmin; }
   .dropdown-menu.show {
     display: block;
     width: 100%;
@@ -596,6 +639,17 @@
     margin: 2rem;
     flex-direction: column;
     align-items: center; }
+  .section-actividades__excursiones-gallery {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 198px;
+    padding: 8px;
+    padding-top: 2rem;
+    gap: 0px; }
+  .section-actividades__gallery-item:nth-child(4) {
+    grid-column-start: span 2; }
+  .section-actividades__gallery-item:nth-child(1) {
+    grid-row-start: span 2; }
   .contenedor__p {
     text-align: justify;
     padding: 1rem;
@@ -605,7 +659,7 @@
     font-size: 0.5rem;
     border-radius: 1rem; }
   .section-aloja__gallery-title {
-    font-size: calc(1rem + .9vw); }
+    font-size: 4vmin; }
   .contenedor__p {
     text-align: justify;
     padding: 1rem; }
@@ -633,10 +687,6 @@
     width: 80%;
     max-width: 387px;
     margin: 0 auto; }
-  .section-contactos__mb-3 {
-    width: 361px;
-    align-content: center;
-    align-items: center; }
   .section-contactos__maps {
     padding: 1rem; } }
 
@@ -646,33 +696,49 @@
   main {
     font-size: 0.5rem; }
   .header {
-    width: 100vw;
+    width: 100%;
     height: 80vh; }
   .banner__titulo {
     font-size: 5vmin;
     margin-top: 50px;
     margin-bottom: 30px; }
+  .navbar-brand {
+    padding-right: 4rem; }
   /*------------------------Actividades-----------------------*/
   .main__actividades {
     width: 90%;
     margin: 0px auto;
     font-size: 1rem;
     overflow: hidden; }
+  .section-actividades__paseos-card {
+    display: flex;
+    margin-bottom: 3rem;
+    justify-content: center;
+    align-items: center;
+    align-content: space-around; }
   .section-actividades__resort-banner1 {
     width: 88vw;
     height: 52vh; }
+  .section-actividades__resort {
+    margin-top: -4rem; }
+  .section-actividades__resort-card {
+    display: flex;
+    padding-bottom: 1rem;
+    margin-top: 2rem;
+    flex-direction: column;
+    align-items: center;
+    align-content: space-around; }
   .section-actividades__resortcardr-item {
     margin-bottom: 2rem; }
   .section-actividades__excursiones-banner1 {
     width: 88vw;
     height: 52vh; }
-  .section-actividades__excursiones-card {
-    display: flex;
-    margin: 1rem;
-    flex-direction: column;
-    align-items: center; }
-  .section-actividades__resort {
-    margin-top: -4rem; }
+  .section-actividades__excursiones-gallery {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 167px;
+    padding: 3px;
+    gap: 0px; }
   .section-actividades__excursiones {
     margin-top: -4rem; }
   .banner__info {
@@ -688,12 +754,6 @@
     text-align: initial;
     padding: 1rem;
     font-size: 1rem; }
-  .excursiones__card {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 0rem; }
   /*------------------------contactos-------------------------*/
   .section-contactos__form {
     width: 70%;
@@ -726,6 +786,8 @@
     list-style: none;
     padding: 0;
     font-size: 0.8rem; }
+  .section-contactos__mb-3 {
+    width: 227px; }
   /*------------------------vuelo-----------------------------*/
   .main__vuelos {
     font-size: 1rem; }
@@ -747,4 +809,4 @@
     margin: 0rem;
     border-radius: 3rem; }
   .section-aloja__gallery-title {
-    font-size: calc(1rem + .2vw); } }
+    font-size: 3vmin; } }
