--- a/sass/parciales/_media-queries.scss
+++ b/sass/parciales/_media-queries.scss
@@ -2,12 +2,13 @@
 @media screen and (max-width: 1025px) {
     /*------------------------index-----------------------------*/
     .header {
-        width: 100vw;
+        width: 100%;
         height: 100vh; }
     .navbar-brand {
         color: #fff;
-        font-size: 2rem;
-        padding-right: 14rem; }
+        font-size:4vmin;
+        //padding-right: 14rem; 
+        }
     /*------------------------Actividades-----------------------*/
     .section-actividades__resort {
         display: flex;
@@ -22,16 +23,36 @@
 @media screen and (max-width: 769px) {
     /*------------------------index-----------------------------*/
     .header {
-        width: 100vw;
+        width: 100%;
         height: 100vh;
-        overflow: hidden; }
+        //overflow: hidden; 
+        }
     .navbar-brand {
         color: #fff;
-        font-size: 2rem;
-        padding-right: 28rem; }
+        font-size: 4vmin;
+        //padding-right: 28rem; 
+        }
     .dropdown-menu.show {
         display: block;
         width: fit-content; }
+    .section__item {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        margin-top: 20px;
+        flex-direction: column; }
+    /*------------------------Actividades-----------------------*/
+    .section-actividades__paseos-card {
+        display: flex;
+        margin-bottom: 3rem;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;}
+    .section-actividades__resort-card {
+        display: flex;
+        justify-content: space-evenly;
+        margin-top: 2rem;
+        flex-wrap: wrap;}
     /*------------------------vuelo-----------------------------*/
     .section-vuelos__card {
         display: flex;
@@ -63,13 +84,14 @@
     .section__col {
         margin-bottom: 2rem; }
     .header {
-        width: 100vw;
+        width: 100%;
         height: 100vh;
         overflow: hidden; }
     .navbar-brand {
         color: #fff;
-        font-size: 2rem;
-        padding-right: 1rem; }
+        font-size: 4vmin;
+        //padding-right: 1rem;
+        }
     .dropdown-menu.show {
         display: block;
         width: 100%;
@@ -109,6 +131,21 @@
         margin: 2rem;
         flex-direction: column;
         align-items: center; }
+
+    .section-actividades__excursiones-gallery {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: 198px;
+        padding: 8px;
+        padding-top: 2rem;
+        gap: 0px;}
+
+    .section-actividades__gallery-item:nth-child(4) {
+        grid-column-start: span 2; }
+
+    .section-actividades__gallery-item:nth-child(1) {
+        grid-row-start: span 2; }
+    
     .contenedor__p {
         text-align: justify;
         padding: 1rem;
@@ -118,7 +155,7 @@
         font-size: 0.5rem;
         border-radius: 1rem; }
     .section-aloja__gallery-title {
-        font-size: calc(1rem + .9vw); }
+    font-size: 4vmin;}
     .contenedor__p {
         text-align: justify;
         padding: 1rem; }
@@ -146,12 +183,9 @@
         width: 80%;
         max-width: 387px;
         margin: 0 auto; }
-    .section-contactos__mb-3 {
-        width: 361px;
-        align-content: center;
-        align-items: center; }
     .section-contactos__maps {
-        padding: 1rem; } }
+        padding: 1rem; } 
+}
 
 /*-----------------------@MEDIAS/320-----------------------*/
 @media screen and (max-width: 321px) {
@@ -159,33 +193,49 @@
     main {
         font-size: 0.5rem; }
     .header {
-        width: 100vw;
+        width: 100%;
         height: 80vh; }
     .banner__titulo {
         font-size: 5vmin;
         margin-top: 50px;
         margin-bottom: 30px; }
+    .navbar-brand {
+        padding-right: 4rem; }
     /*------------------------Actividades-----------------------*/
     .main__actividades {
         width: 90%;
         margin: 0px auto;
         font-size: 1rem;
         overflow: hidden; }
+    .section-actividades__paseos-card {
+        display: flex;
+        margin-bottom: 3rem;
+        justify-content: center;
+        align-items: center;
+        align-content: space-around;}
     .section-actividades__resort-banner1 {
         width: 88vw;
         height: 52vh; }
+    .section-actividades__resort {
+        margin-top: -4rem; }
+    .section-actividades__resort-card {
+        display: flex;
+        padding-bottom: 1rem;
+        margin-top: 2rem;
+        flex-direction: column;
+        align-items: center;
+        align-content: space-around;}
     .section-actividades__resortcardr-item {
         margin-bottom: 2rem; }
     .section-actividades__excursiones-banner1 {
         width: 88vw;
         height: 52vh; }
-    .section-actividades__excursiones-card {
-        display: flex;
-        margin: 1rem;
-        flex-direction: column;
-        align-items: center; }
-    .section-actividades__resort {
-        margin-top: -4rem; }
+    .section-actividades__excursiones-gallery {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: 167px;
+        padding: 3px;
+        gap: 0px;}
     .section-actividades__excursiones {
         margin-top: -4rem; }
     .banner__info {
@@ -201,12 +251,7 @@
         text-align: initial;
         padding: 1rem;
         font-size: 1rem; }
-    .excursiones__card {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-        padding-top: 0rem; }
+    
     /*------------------------contactos-------------------------*/
     .section-contactos__form {
         width: 70%;
@@ -239,6 +284,8 @@
         list-style: none;
         padding: 0;
         font-size: 0.8rem; }
+    .section-contactos__mb-3 {
+        width: 227px;}
     /*------------------------vuelo-----------------------------*/
     .main__vuelos {
         font-size: 1rem; }
@@ -260,4 +307,5 @@
         margin: 0rem;
         border-radius: 3rem; }
     .section-aloja__gallery-title {
-        font-size: calc(1rem + .2vw); } }
+    font-size: 3vmin;}
+}
