--- a/sass/parciales/_section-actividades.scss
+++ b/sass/parciales/_section-actividades.scss
@@ -35,7 +35,7 @@
         display: flex;
         align-items: flex-end;
         justify-content: center; }
-    
+
     &__excursionescardr-item {
         margin-bottom: 2rem; }
     
@@ -43,4 +43,39 @@
         display: flex;
         justify-content: space-evenly;
         margin: 2rem; }
+
+    
+    &__excursiones-gallery {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-auto-rows: 257px;
+        padding: 8px;
+        padding-top: 6rem;
+        gap: 5px; 
+    }
+    &__gallery-item {
+        position: relative; }
+
+    &__gallery-title {
+        font-size: 3vmin;
+        position: absolute;
+        bottom: 0;
+        color: #fff;
+        background: linear-gradient(348deg, black, transparent);
+        width: 100%;
+        margin: 0;
+        padding: 10px; }
+
+    &__gallery-img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover; }
+
+    &__gallery-item:nth-child(4) {
+        grid-column-start: span 2; }
+
+    &__gallery-item:nth-child(1) {
+        grid-row-start: span 3; }
+
+
 }
