--- a/sass/parciales/_section-aloja.scss
+++ b/sass/parciales/_section-aloja.scss
@@ -18,6 +18,7 @@
         justify-content: center; }
     
     &__gallery {
+        font-size: 3vmin;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-auto-rows: 257px;
