--- a/css/compilado.css
+++ b/css/compilado.css
@@ -13,8 +13,7 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  border: 3px brown solid; }
+  box-sizing: border-box; }
 
 .body {
   display: flex;
